# - CMake script for pp6lib library
#
add_library(pp6lib STATIC 
  PP6Math.hpp 
  PP6Math.cpp
  PP6Day1Menu.hpp 
  PP6Day1Menu.cpp
  PP6Day2Menu.hpp 
  PP6Day2Menu.cpp
  PP6Day2VectorAnalysis.hpp
  PP6Day2VectorAnalysis.cpp
  PP6Day2MuonAnalysis.hpp
  PP6Day2MuonAnalysis.cpp
  PP6Day3Menu.hpp
  PP6Day3Menu.cpp
  PP6FourVector.hpp
  PP6FourVector.cpp
  )

